[gd_scene load_steps=2 format=3 uid="uid://d1hm6ktd2n7bk"]

[ext_resource type="Script" path="res://Question_editor.gd" id="1_0k3ld"]

[node name="QuestionEditor" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 2.30396
offset_bottom = 1.0
script = ExtResource("1_0k3ld")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 499.576
anchor_bottom = 657.0
offset_right = -1.00317
offset_bottom = -12.0001
theme_override_constants/separation = 5

[node name="Add Question" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Add"

[node name="Edit Question" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Edit"

[node name="Delete Question" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Delete"

[node name="Questions" type="ItemList" parent="VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="Popup" type="Window" parent="."]
size = Vector2i(400, 700)
visible = false

[node name="Name" type="LineEdit" parent="Popup"]
custom_minimum_size = Vector2(400, 50)
offset_right = 400.0
offset_bottom = 50.0
placeholder_text = "enter name here"

[node name="Text" type="LineEdit" parent="Popup"]
custom_minimum_size = Vector2(400, 50)
offset_top = 50.0
offset_right = 400.0
offset_bottom = 200.0
placeholder_text = "enter question here"

[node name="correct" type="LineEdit" parent="Popup"]
custom_minimum_size = Vector2(400, 50)
offset_top = 200.0
offset_right = 400.0
offset_bottom = 250.0
placeholder_text = "enter correct answer"

[node name="wrong1" type="LineEdit" parent="Popup"]
custom_minimum_size = Vector2(400, 50)
offset_top = 250.0
offset_right = 400.0
offset_bottom = 300.0
placeholder_text = "enter a wrong answer"

[node name="wrong2" type="LineEdit" parent="Popup"]
custom_minimum_size = Vector2(400, 50)
offset_top = 300.0
offset_right = 400.0
offset_bottom = 350.0
placeholder_text = "enter a wrong answer"

[node name="wrong3" type="LineEdit" parent="Popup"]
custom_minimum_size = Vector2(400, 50)
offset_top = 350.0
offset_right = 400.0
offset_bottom = 400.0
placeholder_text = "enter a wrong answer"

[node name="prompt" type="LineEdit" parent="Popup"]
custom_minimum_size = Vector2(400, 50)
offset_top = 400.0
offset_right = 400.0
offset_bottom = 450.0
placeholder_text = "enter post prompt text if applicable"

[node name="tags" type="LineEdit" parent="Popup"]
custom_minimum_size = Vector2(400, 50)
offset_top = 450.0
offset_right = 400.0
offset_bottom = 500.0
placeholder_text = "enter , delimited list of tags for this question"

[node name="SaveButton" type="Button" parent="Popup"]
custom_minimum_size = Vector2(400, 50)
offset_top = 500.0
offset_right = 400.0
offset_bottom = 550.0
text = "Save
"
